--- a/styles/flower.css
+++ b/styles/flower.css
@@ -1,5 +1,80 @@
-.banner-content{
+.banner-content {
     display: contents;
     justify-content: space-between;
     align-items: center;
+}
+
+.banner {
+    padding: 30px 30px 0px 150px;
+    font-family: Lato;
+    display: flex;
+    justify-content: space-between;
+    background: rgba(229, 84, 115, 0.10);
+    align-items: center;
+
+}
+
+.button-primary {
+    border-radius: 8px;
+    background: #E55473;
+    color: #FFF;
+
+    font-size: 20px;
+
+    font-weight: 100px;
+    display: inline-flex;
+    padding: 20px 30px;
+    align-items: flex-start;
+    gap: 7px;
+
+}
+
+.headline {
+    color: #272727;
+
+    font-size: 80px;
+}
+
+.banner-description {
+    color: rgba(39, 39, 39, 0.60);
+
+    font-size: 18px;
+
+    font-weight: 400;
+    line-height: 30px;
+
+}
+
+.banner .profile-pic {
+    width: 635px;
+    height: 800px;
+    flex-shrink: 0;
+    margin-right: 240px;
+    margin-top: 50px;
+    
+    
+
+   
+}
+
+.headline{
+    margin-top: 197px;
+    margin-left: 240px;
+    margin-right: 97px;
+}
+
+.banner-description{
+    margin-top: 32px;
+    margin-bottom: 32px;
+    margin-left: 240px;
+    margin-right: 171px;
+
+}
+
+.button-primary{
+    margin-top: 32px;
+    margin-bottom: 147px;
+    margin-left: 240px;
+    margin-right: 628px;
+
 }
