--- a/styles/flower.css
+++ b/styles/flower.css
@@ -1,3 +1,5 @@
+/*header section style */
+
 .banner-content {
     display: contents;
     justify-content: space-between;
@@ -51,19 +53,19 @@
     flex-shrink: 0;
     margin-right: 240px;
     margin-top: 50px;
-    
-    
 
-   
+
+
+
 }
 
-.headline{
+.headline {
     margin-top: 197px;
     margin-left: 240px;
     margin-right: 97px;
 }
 
-.banner-description{
+.banner-description {
     margin-top: 32px;
     margin-bottom: 32px;
     margin-left: 240px;
@@ -71,10 +73,98 @@
 
 }
 
-.button-primary{
+.button-primary {
     margin-top: 32px;
     margin-bottom: 147px;
     margin-left: 240px;
     margin-right: 628px;
+
+}
+
+
+/* main section */
+.section-title {
+    color: #272727;
+    text-align: center;
+    font-family: Lato;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+
+    font-weight: 800;
+    margin-top: 178px;
+    margin-bottom: 24px;
+
+
+}
+
+.section-description {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+
+    font-weight: 400;
+    line-height: 30px;
+
+}
+
+.flower-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.flower1 {
+    width: 464px;
+    height: 538px;
+    flex-shrink: 0;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+}
+
+.pink-tulip {
+    width: 310px;
+    height: 428px;
+    flex-shrink: 0;
+    margin-top: 110px;
+    margin-bottom: 0px;
+    margin-left: 73px;
+    margin-right: 78px;
+
+}
+
+.flower2 {
+    width: 464px;
+    height: 538px;
+    flex-shrink: 0;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(5, 151, 160, 0.15);
+
+}
+
+
+.mixed-tulip {
+
+    margin-top: 110px;
+    margin-bottom: 0px;
+    margin-left: 77px;
+    margin-right: 78px;
+}
+
+.flower3 {
+    width: 464px;
+    height: 538px;
+    flex-shrink: 0;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(71, 125, 17, 0.15);
+}
+
+.yellow-tulip {
+    margin-top: 110px;
+    margin-bottom: 0px;
+    margin-left: 77px;
+    margin-right: 78px;
 
 }
