--- a/styles/flower.css
+++ b/styles/flower.css
@@ -104,6 +104,10 @@
     text-align: center;
     font-family: Lato;
     font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    /* 166.667% */
 
     font-weight: 400;
     line-height: 30px;
@@ -114,6 +118,8 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    margin-top: 48px;
+
 }
 
 .flower1 {
@@ -162,9 +168,237 @@
 }
 
 .yellow-tulip {
-    margin-top: 110px;
-    margin-bottom: 0px;
-    margin-left: 77px;
-    margin-right: 78px;
 
+    margin-top: 67px;
+    margin-bottom: 70px;
+    margin-left: 73px;
+    margin-right: 78px;
+    width: 314px;
+    height: 471px;
+    flex-shrink: 0;
+    align-items: center;
+
+}
+
+.flower-name1 {
+    color: #272727;
+    text-align: center;
+    font-family: Lato;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 35px;
+    /* 145.833% */
+    text-decoration-line: underline;
+}
+
+.flower-name2 {
+    color: #272727;
+    text-align: center;
+    font-family: Lato;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 35px;
+    /* 145.833% */
+    text-decoration-line: underline;
+}
+
+.flower-name3 {
+    color: #272727;
+    text-align: center;
+    font-family: Lato;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 35px;
+    /* 145.833% */
+    text-decoration-line: underline;
+}
+
+
+.flower-container-name {
+    display: flex;
+    justify-content: center;
+
+}
+
+.flower-name1 {
+    margin-left: 81px;
+    margin-right: 586px;
+
+}
+
+.flower-name2 {
+    margin-left: 0px;
+    margin-right: 603px;
+
+}
+
+.flower-name3 {
+    margin-left: 0px;
+    margin-right: 91px;
+
+}
+
+/* Our spreciality */
+
+.special-feature-container {
+    width: 1440px;
+    height: 320px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: rgba(39, 39, 39, 0.05);
+    display: flex;
+    align-items: center;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-top: 128px;
+    justify-content: space-between;
+    padding: 10px 10px 10px 10px;
+
+
+}
+
+.man-icon {
+    width: 88px;
+    height: 88px;
+    flex-shrink: 0;
+    margin-left: 90px;
+
+}
+
+.flower-icon {
+    width: 88px;
+    height: 88px;
+    flex-shrink: 0;
+
+    align-self: center;
+}
+
+.phone-icon {
+    width: 88px;
+    height: 88px;
+    flex-shrink: 0;
+}
+
+.speciality {
+    color: rgba(39, 39, 39, 0.80);
+    text-align: center;
+    font-family: Lato;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 35px;
+
+    /* 145.833% */
+}
+
+.banner2 {
+
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: rgba(229, 84, 115, 0.05);
+
+
+    font-family: Lato;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 128px;
+}
+
+.banner2 .profile-pic {
+    width: 318px;
+    height: 420px;
+    flex-shrink: 0;
+    margin-right: 240px;
+    margin-top: 50px;
+    padding: 100px 430px 100px 430px;
+}
+
+
+/* social */
+
+.social {
+
+    background: #FFF;
+    padding: 30px 30px 30px 150px;
+    font-family: Lato;
+    display: contents;
+    justify-content: space-between;
+
+    align-items: center;
+}
+
+.headline {
+    color: #272727;
+    text-align: center;
+    font-family: Lato;
+    font-size: 40px;
+
+    font-weight: 800;
+    ;
+}
+
+.social-description {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+
+    font-weight: 400;
+    line-height: 30px;
+    /* 166.667% */
+}
+
+.items {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 80px 120px;
+}
+
+.image-item {
+    width: 342px;
+    height: 396px;
+    flex-shrink: 0;
+}
+
+.banner2 {
+    width: 1440px;
+    height: 449px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: url('/Flower Asset/Rectangle\ 9.png'), lightgray 0px -203.444px / 100% 213.755% no-repeat;
+    align-items: center;
+  
+    
+}
+
+
+.headline2 {
+
+    color: #272727;
+    text-align: center;
+    font-family: Lato;
+    font-size: 40px;
+   
+    font-weight: 800;
+ 
+}
+
+.banner-description2 {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    
+    font-weight: 400;
+    line-height: 30px;
+    /* 166.667% */
+}
+.form-fill-up{
+    align-items: center;
+    display: flex;
 }
