--- a/styles/flower.css
+++ b/styles/flower.css
@@ -365,40 +365,112 @@
     flex-shrink: 0;
 }
 
-.banner2 {
+.banner3 {
     width: 1440px;
     height: 449px;
     flex-shrink: 0;
     border-radius: 8px;
-    background: url('/Flower Asset/Rectangle\ 9.png'), lightgray 0px -203.444px / 100% 213.755% no-repeat;
-    align-items: center;
-  
-    
+    background: url('/Flower ASset/Rectangle\ 9.png'), lightgray 0px -203.444px / 100% 213.755% no-repeat;
+
+    display: flexbox;
+    align-content: center;
+    margin-left: 20px;
+    margin-bottom: 128px;
 }
 
 
-.headline2 {
+.headline3 {
 
     color: #272727;
     text-align: center;
     font-family: Lato;
     font-size: 40px;
-   
+
     font-weight: 800;
- 
+
+
 }
 
-.banner-description2 {
+.banner-description3 {
     color: rgba(39, 39, 39, 0.60);
     text-align: center;
     font-family: Lato;
     font-size: 18px;
-    
+
     font-weight: 400;
     line-height: 30px;
     /* 166.667% */
 }
-.form-fill-up{
-    align-items: center;
+
+.submit input[type="text"],
+input[type="email"],
+textarea {
+
+    width: 700px;
+    height: 64px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #FFF;
+}
+
+.submit {
     display: flex;
+
+    align-items: center;
+    margin-left: 287px;
+    justify-content: center;
+}
+
+
+footer {
+    width: 2322px;
+    height: 350px;
+    flex-shrink: 0;
+    background: #111010;
+    padding: 70px 0px;
+   
+    text-align: center;
+    margin-top: 128px;
+    position: absolute;
+    
+}
+
+.footer-description {
+    color: rgba(255, 255, 255, 0.90);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    /* 166.667% */
+    
+}
+
+.typei {
+    color: rgba(255, 255, 255, 0.40);
+    text-align: center;
+    font-family: Lato;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.nav-title {
+    color: #E55473;
+    font-family: Lato;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.text-primary {
+    color: #FFF;
+    font-family: Lato;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
 }
